--- a/portfolio.css
+++ b/portfolio.css
@@ -4,7 +4,7 @@ body {
 
 h1 {
     font-family: 'ArgentCF', serif;
-    font-weight: 900;
+    font-weight: super;
     font-size: 3em;
     color: #313131;
 }
@@ -244,7 +244,6 @@ footer {
 
 .number {
     font-family: 'ArgentCF', serif;
-    font-weight: 400;
     font-style: italic;
     color: #505050;
     margin: 0;
