--- a/fonts.css
+++ b/fonts.css
@@ -1,6 +1,12 @@
 @font-face {
     font-family: "ArgentCF";
-    src: url("fonts/ArgentCF-LightItalic.woff") format('woff');
+    src: url("fArgentCF-Light.woff") format('woff');
+    font-weight: 300;
+}
+
+@font-face {
+    font-family: "ArgentCF";
+    src: url("fArgentCF-LightItalic.woff") format('woff');
     font-weight: 300;
     font-style: italic;
 }
@@ -18,32 +24,32 @@
 
 @font-face {
     font-family: "ArgentCF";
-    src: url("fonts/ArgentCF-DemiBold.woff.woff") format('woff');
-    font-weight: bold;
+    src: url("fonts/ArgentCF-DemiBold.woff") format('woff');
+    font-weight: 600;
 }
 
 @font-face {
     font-family: "ArgentCF";
     src: url("fonts/ArgentCF-DemiBoldItalic.woff") format('woff');
-    font-weight: bold;
+    font-weight: 600;
     font-style: italic;
 }
 
 @font-face {
     font-family: "ArgentCF";
     src: url("fonts/ArgentCF-Bold.woff") format('woff');
-    font-weight: bolder;
+    font-weight: 700;
 }
 
 @font-face {
     font-family: "ArgentCF";
     src: url("fonts/ArgentCF-BoldItalic.woff") format('woff');
-    font-weight: bolder;
+    font-weight: 700;
     font-style: italic;
 }
 
 @font-face {
     font-family: "ArgentCF";
     src: url("fonts/ArgentCF-Super.woff") format('woff');
-    font-weight: super;
+    font-weight: 900;
 }
