fine art page and pupdated styling

--- a/fonts.css
+++ b/fonts.css
@@ -1,12 +1,12 @@
 @font-face {
     font-family: "ArgentCF";
-    src: url("fArgentCF-Light.woff") format('woff');
+    src: url("fonts/ArgentCF-Light.woff") format('woff');
     font-weight: 300;
 }
 
 @font-face {
     font-family: "ArgentCF";
-    src: url("fArgentCF-LightItalic.woff") format('woff');
+    src: url("fonts/ArgentCF-LightItalic.woff") format('woff');
     font-weight: 300;
     font-style: italic;
 }
