--- a/portfolio.css
+++ b/portfolio.css
@@ -621,16 +621,102 @@ footer {
 }
 
 #hivisid-type-subtitle {
-    grid-column: 2 / 4;
+    grid-column: 3 / span 2;
 }
 
 #hivisid-type-p {
-    grid-column: 4 / 8;
+    grid-column: 6 / 10;
+}
+
+.hivisid-typestudies {
+    display: grid;
+    grid-template: 25% 25% 50% / repeat(12, 1fr);
+    margin-top: 10%;
+}
+
+.oswald {
+    grid-column: 3 / 12;
+    grid-row: 1 / span 1;
+    display: grid;
+    grid-template: 1fr / repeat(12, 1fr);
+}
+
+.oswald-subtitle {
+    grid-column: 1 / 3;
+    font-family: 'Oswald', sans-serif;
+    font-weight: bold;
+    font-size: 1.8em;
+}
+
+.oswald-alphabet {
+    grid-column: 5 / 10;
+    font-family: 'Oswald', sans-serif;
+    font-size: 1.3em;
+    font-weight: 400;
+}
+
+.garamond {
+    grid-column: 3 / 12;
+    grid-row: 2 / span 1;
+    display: grid;
+    grid-template: 1fr / repeat(12, 1fr);
+}
+
+.garamond-subtitle {
+    grid-column: 1 / 3;
+    font-family: 'adobe-garamond-pro', serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 1.8em;
+}
+
+.garamond-alphabet {
+    grid-column: 5 / 10;
+    font-family: 'adobe-garamond-pro', serif;
+    font-style: normal;
+    font-size: 1.3em;
 }
 
 .hivisid-typeexamples {
+    grid-column: 3 / 12;
+    grid-row: 3 / span 1;
     display: grid;
     grid-template: 1fr / repeat(12, 1fr);
+    margin-top: 5%;
+}
+
+.hivisid-typecaptions {
+    grid-column: 1 / 3;
+    font-size: .8em;
+    text-transform: uppercase;
+}
+
+.garamond-caption {
+    padding-top: 30%;
+}
+
+.hivisid-typeusecases {
+    grid-column: 5 / 12;
+}
+
+.hivisid-header-ex {
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    font-size: 2em;
+    margin: 0;
+}
+
+.hivisid-subtitle-ex {
+    font-family: 'adobe-garamond-pro', serif;
+    font-style: italic;
+    font-size: 1.8em;
+    font-weight: normal;
+    margin-top: 2%;
+}
+
+.hivisid-p-ex {
+    font-family: 'adobe-garamond-pro', serif;
+    font-size: 1em;
 }
 
 
@@ -651,10 +737,53 @@ footer {
     #hivisid-type-p {
         grid-column: 2 / 12;
     }
+    .oswald {
+        grid-column: 2 / 12;
+    }
+    .garamond {
+        grid-column: 2 / 12;
+    }
+    .hivisid-typeexamples{
+        grid-column: 2 / 12;
+    }
+    .hivisid-typecaptions {
+        display: none;
+    }
+    .hivisid-typeusecases {
+        grid-column: 1 / 13;
+        margin-top: 5%;
+    }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 600px) {
     .hivisid-header-group {
         grid-column: 2 / 12;
+    }
+    .oswald-subtitle {
+        grid-column: 1 / 12;
+        margin-bottom: 0;
+        font-size: 1.5em;
+    }
+    .oswald-alphabet {
+        grid-column: 1 / 12;
+        margin-top: 2%;
+        font-size: 1em;
+    }
+    .garamond-subtitle {
+        grid-column: 1 / 12;
+        margin-bottom: 0;
+        margin-top: 10%;
+        font-size: 1.5em;
+    }
+    .garamond-alphabet {
+        grid-column: 1 / 12;
+        margin-top: 2%;
+        font-size: 1em;
+    }
+    .hivisid-header-ex {
+        font-size: 1.8em;
+    }
+    .hivisid-subtitle-ex {
+        font-size: 1.5em;
     }
 }
