--- a/portfolio.css
+++ b/portfolio.css
@@ -393,6 +393,7 @@ footer {
 .project-heading-group {
     display: grid;
     grid-template: 1fr / repeat(12, 1fr);
+    margin-bottom: 8%;
 }
 
 .project-main-heading {
@@ -468,7 +469,7 @@ footer {
         width: 20%;
     }
     .project-img-link {
-        grid-column: 1 / 13;
+        grid-column: 2 / 12;
     } 
     .project-info {
         grid-column: 2 / 12;
@@ -714,109 +715,42 @@ footer {
 
 .hivisid-type {
     display: grid;
-    grid-template: 1fr / repeat(12, 1fr);
-    padding-top: 5%;
+    grid-template-columns: repeat(12, 1fr);
+    padding-top: 10%;
     padding-bottom: 5%;
 }
 
 #hivisid-type-subtitle {
-    grid-column: 3 / span 2;
+    grid-column: 2 / 12;
+    font-family: 'benton-sans', sans-serif;
+    font-size: 1.3em;
+    font-style: normal;
+    font-weight: 600;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: .1em;
 }
 
 #hivisid-type-p {
-    grid-column: 6 / 10;
+    grid-column: 5 / 9;
+    padding-bottom: 20%;
 }
 
-.hivisid-typestudies {
-    display: grid;
-    grid-template: 1fr / repeat(12, 1fr);
-    margin-top: 10%;
-    margin-bottom: 10%;
+#letter-study-oswald {
+    grid-column: 2 / 6;
 }
 
-.oswald {
-    grid-column: 3 / 12;
-    grid-row: 1 / span 1;
-    display: grid;
-    grid-template: 1fr / repeat(12, 1fr);
+#letter-study-garamond {
+    grid-column: 8 / 12;
 }
 
-.oswald-subtitle {
-    grid-column: 1 / 3;
-    font-family: 'Oswald', sans-serif;
-    font-weight: bold;
-    font-size: 1.8em;
+#type-study-examples {
+    grid-column: 2 / 12;
+    padding-top: 10%;
 }
 
-.oswald-alphabet {
-    grid-column: 5 / 10;
-    font-family: 'Oswald', sans-serif;
-    font-size: 1.3em;
-    font-weight: 400;
-}
-
-.garamond {
-    grid-column: 3 / 12;
-    grid-row: 2 / span 1;
-    display: grid;
-    grid-template: 1fr / repeat(12, 1fr);
-}
-
-.garamond-subtitle {
-    grid-column: 1 / 3;
-    font-family: 'adobe-garamond-pro', serif;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 1.8em;
-}
-
-.garamond-alphabet {
-    grid-column: 5 / 10;
-    font-family: 'adobe-garamond-pro', serif;
-    font-style: normal;
-    font-size: 1.3em;
-}
-
-.hivisid-typeexamples {
-    grid-column: 3 / 12;
-    grid-row: 3 / span 1;
-    display: grid;
-    grid-template: 1fr / repeat(12, 1fr);
-    margin-top: 5%;
-}
-
-.hivisid-typecaptions {
-    grid-column: 1 / 3;
-    font-size: .8em;
-    text-transform: uppercase;
-}
-
-.garamond-caption {
-    padding-top: 30%;
-}
-
-.hivisid-typeusecases {
-    grid-column: 5 / 12;
-}
-
-.hivisid-header-ex {
-    font-family: 'Oswald', sans-serif;
-    text-transform: uppercase;
-    font-size: 2em;
-    margin: 0;
-}
-
-.hivisid-subtitle-ex {
-    font-family: 'adobe-garamond-pro', serif;
-    font-style: italic;
-    font-size: 1.8em;
-    font-weight: normal;
-    margin-top: 2%;
-}
-
-.hivisid-p-ex {
-    font-family: 'adobe-garamond-pro', serif;
-    font-size: 1em;
+#type-study-examples-cropped {
+    visibility: hidden;
 }
 
 .hivisid-color {
@@ -1037,21 +971,18 @@ footer {
     #hivisid-type-p {
         grid-column: 2 / 12;
     }
-    .oswald {
-        grid-column: 2 / 12;
+    #letter-study-oswald {
+        grid-column: 3 / 11;
     }
-    .garamond {
-        grid-column: 2 / 12;
+    #letter-study-garamond {
+        grid-column: 3 / 11;
     }
-    .hivisid-typeexamples{
-        grid-column: 2 / 12;
-    }
-    .hivisid-typecaptions {
+    #type-study-examples {
         display: none;
     }
-    .hivisid-typeusecases {
-        grid-column: 1 / 13;
-        margin-top: 5%;
+    #type-study-examples-cropped {
+        visibility: visible;
+        grid-column: 3 / 11;
     }
     #hivisid-color-subtitle {
         grid-column: 2 / 12;
