--- a/portfolio.css
+++ b/portfolio.css
@@ -25,6 +25,10 @@ h3 {
     font-size: 2em;
 }
 
+h4 {
+    font-family: 'ArgentCF';
+}
+
 h5 {
     font-family: 'benton-sans', sans-serif;
     font-size: 1.1em;
@@ -78,11 +82,11 @@ img {
 }
 
 .top-padding {
-    margin-top: 10%;
+    margin-top: 15%;
 }
 
 .bottom-padding {
-    margin-bottom: 10%;
+    margin-bottom: 15%;
 }
 
 .top-image-margin-top {
@@ -555,7 +559,7 @@ footer {
 }
 
 .proj-client-role {
-    grid-column: 3 / 8;
+    grid-column: 11 / 14;
 }
 
 .client-title {
@@ -656,16 +660,17 @@ footer {
 .gbo-header-img {
     background-image: url('images/design-project-images/great-blue-orange/index-sunset-1.png');
     background-size: cover;
+    background-attachment: fixed;
     height: 70vh;
 }
 
 .gbo-header-title {
-    grid-column: 3 / 12;
+    grid-column: 4 / 12;
     margin-bottom: 10%;
 }
 
 .gbo-header-p {
-    grid-column: 9 / 15;
+    grid-column: 4 / 10;
 }
 
 .gbo-site-arch-sketch {
@@ -673,11 +678,11 @@ footer {
 }
 
 .gbo-breathable-title {
-    grid-column: 3 / 7;
+    grid-column: 4 / 8;
 }
 
 .gbo-breathable-p {
-    grid-column: 8 / 15;
+    grid-column: 8 / 14;
 }
 
 .gbo-sketch-wireframe-background {
@@ -699,7 +704,7 @@ footer {
 }
 
 .gbo-mobile-group {
-    grid-column: 3 / 15;
+    grid-column: 3 / 14;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -709,9 +714,107 @@ footer {
     width: 75%;
 }
 
+.gbo-lighthouse-img {
+    grid-column: 2 / 16;
+    height: 50vh;
+    background-image: url('images/design-project-images/great-blue-orange/about-lighthouse.png');
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+.gbo-user-testing-heading {
+    grid-column: 4 / 14;
+}
+
+.gbo-user-testing-p-1 {
+    grid-column: 4 / 14;
+}
+
+.gbo-breakdown {
+    grid-column: 4 / 14;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding-top: 8%;
+    padding-bottom: 8%;
+}
+
+.gbo-breakdown-item {
+    width: 48%;
+}
+
+.gbo-breakdown-number-title {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.gbo-breakdown-number {
+    font-weight: 600;
+    font-style: italic;
+    font-size: 1.3rem;
+    color: #707070;
+    margin: 0;
+}
+
+.gbo-breakdown-line {
+    width: 10%;
+    height: 0%;
+    border: 1px solid #707070;
+    margin-left: 3%;
+    margin-right: 3%;
+}
+
+.gbo-breakdown-title {
+    font-weight: 600;
+    font-style: italic;
+    text-transform: lowercase;
+    font-size: 1.3rem;
+    color: #505050;
+    margin: 0;
+}
+
+.gbo-user-testing-gallery {
+    grid-column: 4 / 14;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.gbo-user-testing-img {
+    width: 30%;
+}
+
+.gbo-user-testing-p-2 {
+    grid-column: 4 / 14;
+    padding-top: 5%;
+}
+
+.gbo-code-img-1 {
+    grid-column: 2 / 16;
+}
+
+.gbo-code-img-2 {
+    display: none;
+}
+
+.gbo-responsive-title {
+    grid-column: 4 / 7;
+}
+
+.gbo-responsive-p {
+    grid-column: 8 / 14;
+}
+
 @media (max-width: 600px) {
     .gbo-header-group {
         grid-column: 2 / 10;
+    }
+    .gbo-header-title {
+        grid-column: 3 / 15;
+        margin-bottom: 0%;
     }
     #gbo-challenge-subtitle {
         grid-column: 2 / 12;
@@ -747,6 +850,26 @@ footer {
     }
     .gbo-responsive-text {
         width: 100%;
+    }
+    .gbo-breakdown-item {
+        width: 100%;
+    }
+    .gbo-user-testing-img {
+        width: 100%;
+        padding-bottom: 3%;
+    }
+    .gbo-code-img-1 {
+        display: none;
+    }  
+    .gbo-code-img-2 {
+        display: block;
+        grid-column: 1 / 17;
+    }
+    .gbo-responsive-title {
+        grid-column: 3 / 15;
+    } 
+    .gbo-responsive-p {
+        grid-column: 3 / 15;
     }
 }
 
